--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2 class="cargo">Desenvolvedora Frontend Junior</h2>
         <ul class="detalhes">
           <li>Estudante fullStack - Labenu;</li>
-          <li>Estudante de Engenharia de Software;</li>
+          <li>Estudante de Engenharia de Software - Unifatece;</li>
           <li>
             Estudante de Montagem e manuntenção de Computadores/Notebooks e
             Celulares -EloTec;
